--- a/_includes/announcement.html
+++ b/_includes/announcement.html
@@ -1,14 +1,10 @@
 <div id="main-slider" class="liquid-slider">
     <div>
       <h2 class="title">1</h2>
-      <p class="bold">HTFF 2017:</p>
-      <p class="body">HTFF 2017 will  be held in Rome, Italy on June 8 - 10, 2017.</p>
+      <p class="bold">HTFF 2018:</p>
+      <p class="body">HTFF 2018 will  be held in Madrid, Spain on August 16 - 18, 2018.</p>
 
-      <p class="bold">Deadline Extension:</p>
-      <p class="body">Due to the popular request, the paper submission deadline is extended to March 24, 2017. This is the final deadline extension and the deadlines will not be extended anymore.</p>
-
-      <p class="bold">MCM'17 Workshop</p>
-      <p class="body">As per popular request, the organizing committee has decided to extend the MCM'17 congress to three days (now June 8 - 10, 2017). The new high-level schedule is as follows:</p>
+      <!--p class="body">As per popular request, the organizing committee has decided to extend the NewTech'17 congress to three days (now June 6 - 8, 2018). The new high-level schedule is as follows:</p>
 
       <ul>
         <li>Day 1: Workshop(s) and Registration</li>
@@ -18,11 +14,10 @@
       
       <p class="body">Registration for the workshop will be 122 EURs (VAT included) and separate from the main conferences. Workshop attendees will receive a certificate of participation. For registration, please visit: <a href="../registration" class="body-link">here</a>.</p>
 
-      <p class="body">More information to follow; we greatly appreciate your patience!</p>
+      <p class="body">More information to follow; we greatly appreciate your patience!</p-->
 
-
-      <p class="bold">Poster Board Dimensions:</p>
-      <p class="body">Authors presenting via poster boards are to be informed that poster boards are 100 cm height and 90 cm width.</p>
+     <!--  <p class="bold">Poster Board Dimensions:</p>
+      <p class="body">Authors presenting via poster boards are to be informed that poster boards are 100 cm height and 90 cm width.</p> -->
     </div>          
     <div>
       <h2 class="title">2</h2>
@@ -31,8 +26,8 @@
     </div>
     <div>
       <h2 class="title">3</h2>
-      <p class="bold">Propose Exhibits, Workshops & More</p>
-      <p class="body">HTFF attracts a wide range of researchers in the field of nanotechnology. As a prominent company in the field of nanotechnology, we would like to offer you an exhibit at HTFF. Please visit <a href="../events" class="body-link">Events</a> for more information.</p>
+      <p class="bold">Become a Sponsor or an Exhibitor</p>
+      <p class="body">HTFF attracts a wide range of researchers in the field of nanotechnology. As a prominent company in the field of nanotechnology, we would like to offer you an exhibit at HTFF. Please visit <a href="../sponsor" class="body-link">Sponsors</a> for more information.</p>
     </div>
 
   </div>
