--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -45,7 +45,7 @@
 
 <body>
 <nav id="slide-menu">
-  <h1>HTFF'18</h1>
+  <h1>HTFF'19</h1>
   <ul>
     <li><a href="/">Home</a></li>
     <li><a href="../papers">Submissions</a></li>
@@ -70,8 +70,8 @@
     <div class="mobile">
       {% include nav.html %}
         <div class="bg">
-          <h1>5<sup>th</sup> International Conference on Heat<br>Transfer and Fluid Flow (HTFF'18)</h1>
-          <p class="subhead">August 16 - 18, 2018 | Madrid, Spain</p>
+          <h1>6<sup>th</sup> International Conference on Heat<br>Transfer and Fluid Flow (HTFF'19)</h1>
+          <p class="subhead">August, 2019 | Prague, Czech Republic</p>
 
           <a href="../papers" class="bg-link">Submissions</a> <p class="dot">&middot;</p> <a href="../dates" class="bg-link">Important Dates</a> <p class="dot">&middot;</p> <a href="../registration" class="bg-link">Registration</a>
 
@@ -98,8 +98,8 @@
         </div>
 
         <div class="bg">
-          <h1>5<sup>th</sup> International Conference on Heat<br>Transfer and Fluid Flow (HTFF'18)</h1>
-          <p class="subhead">August 16 - 18, 2018 | Madrid, Spain</p>
+          <h1>6<sup>th</sup> International Conference on Heat<br>Transfer and Fluid Flow (HTFF'19)</h1>
+          <p class="subhead">August, 2019 | Prague, Czech Republic</p>
 
           <a href="../papers" class="bg-link">Submissions</a> <p class="dot">&middot;</p> <a href="../dates" class="bg-link">Important Dates</a> <p class="dot">&middot;</p> <a href="../registration" class="bg-link">Registration</a>
 
