--- a/_includes/css/general.css
+++ b/_includes/css/general.css
@@ -910,7 +910,7 @@ textarea {
 .registrationDocuments select {
 	width: 100%;
 }
-
+#Type_of_Registration-error,
 #title-error,
 #First_Name-error,
 #Last_Name-error,
